#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libvisc], [1.0], [sherzodr@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([pow])

AC_OUTPUT
